--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,10 +10,16 @@
 
     <div class="container" id="container">
       <div class="form" id="form">
-        <input type="text" id="amount" placeholder="Enter Amount" />
+        <input type="text" id="amount" placeholder="Enter your income" />
       </div>
       <button class="addBtn" id="addBtn">+</button>
       <button class="submitBtn" id="submitBtn">Submit</button>
+    </div>
+
+    <div class="expenses" id="expenses">
+      <h2>Expenses:</h2>
+      <ul id="expensesList"></ul>
+      <li>exps 1</li>
     </div>
   </body>
   <script src="../dist/index.js"></script>
