--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,13 +10,16 @@
 
     <div class="container" id="container">
       <div class="form" id="form">
-        <input type="text" id="amount" placeholder="Enter your income" />
+        <input type="text" id="income" placeholder="Enter your income" />
+        <input type="number" class="expenses" placeholder="Enter amount" />
+        <input type="number" class="expenses" placeholder="Enter amount" />
       </div>
       <button class="addBtn" id="addBtn">+</button>
       <button class="submitBtn" id="submitBtn">Submit</button>
     </div>
 
-    <div class="expenses" id="expenses">
+    <div class="expensesList" id="expenses">
+      <h2>Income:</h2>
       <h2>Expenses:</h2>
       <ul id="expensesList"></ul>
       <li>exps 1</li>
