can update the income

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
 
     <div class="container" id="container">
       <div class="form" id="form">
-        <input type="text" id="income" placeholder="Enter your income" />
+        <input type="nunber" id="income" placeholder="Enter your income" />
         <input type="number" class="expenses" placeholder="Enter amount" />
         <input type="number" class="expenses" placeholder="Enter amount" />
       </div>
@@ -19,10 +19,9 @@
     </div>
 
     <div class="expensesList" id="expenses">
-      <h2>Income:</h2>
+      <h2 id="userIncome">Income:</h2>
       <h2>Expenses:</h2>
       <ul id="expensesList"></ul>
-      <li>exps 1</li>
     </div>
   </body>
   <script src="../dist/index.js"></script>
