--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,16 +11,16 @@
     <div class="container" id="container">
       <div class="form" id="form">
         <input type="nunber" id="income" placeholder="Enter your income" />
-        <input type="number" class="expenses" placeholder="Enter amount" />
-        <input type="number" class="expenses" placeholder="Enter amount" />
+        <input type="number" class="userExpenses" placeholder="Enter amount" />
+        <input type="number" class="userExpenses" placeholder="Enter amount" />
       </div>
       <button class="addBtn" id="addBtn">+</button>
       <button class="submitBtn" id="submitBtn">Submit</button>
     </div>
 
-    <div class="expensesList" id="expenses">
+    <div class="expensesList" id="userExpenses">
       <h2 id="userIncome">Income:</h2>
-      <h2>Expenses:</h2>
+      <h2 id="expensesText">Expenses:</h2>
       <ul id="expensesList"></ul>
     </div>
   </body>
