added a remaining and test for it

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,6 +20,7 @@
 
     <div class="expensesList" id="userExpenses">
       <h2 id="userIncome">Income:</h2>
+      <h2 id="remainingIncom">Remaining:</h2>
       <h2 id="expensesText">Expenses:</h2>
       <ul id="expensesList"></ul>
     </div>
