added start script for frontend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,8 +11,16 @@
     <div class="container" id="container">
       <div class="form" id="form">
         <input type="nunber" id="income" placeholder="Enter your income" />
-        <input type="number" class="userExpenses" placeholder="Enter amount" />
-        <input type="number" class="userExpenses" placeholder="Enter amount" />
+        <input
+          type="number"
+          class="userExpenses"
+          placeholder="Enter Expenses"
+        />
+        <input
+          type="number"
+          class="userExpenses"
+          placeholder="Enter Expenses"
+        />
       </div>
       <button class="addBtn" id="addBtn">+</button>
       <button class="submitBtn" id="submitBtn">Submit</button>
