--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,17 +10,9 @@
 
     <div class="container" id="container">
       <div class="form" id="form">
-        <input type="nunber" id="income" placeholder="Enter your income" />
-        <input
-          type="number"
-          class="userExpenses"
-          placeholder="Enter Expenses"
-        />
-        <input
-          type="number"
-          class="userExpenses"
-          placeholder="Enter Expenses"
-        />
+        <input type="text" id="income" placeholder="Enter your income" />
+        <input type="text" class="userExpenses" placeholder="Enter Expenses" />
+        <input type="text" class="userExpenses" placeholder="Enter Expenses" />
       </div>
       <button class="addBtn" id="addBtn">+</button>
       <button class="submitBtn" id="submitBtn">Submit</button>
@@ -28,7 +20,7 @@
 
     <div class="expensesList" id="userExpenses">
       <h2 id="userIncome">Income:</h2>
-      <h2 id="remainingIncom">Remaining:</h2>
+      <h2 id="remainingIncome">Remaining:</h2>
       <h2 id="expensesText">Expenses:</h2>
       <ul id="expensesList"></ul>
     </div>
