refacotred some var names and added another validation to user input

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,9 +19,9 @@
     </div>
 
     <div class="expensesList" id="userExpenses">
-      <h2 id="userIncome">Income:</h2>
-      <h2 id="remainingIncome">Remaining:</h2>
-      <h2 id="expensesText">Expenses:</h2>
+      <h2 id="incomeDisplay">Income:</h2>
+      <h2 id="remainingBudgetDisplay">Remaining:</h2>
+      <h2 id="totalOfSpendingDisplay">Expenses:</h2>
       <ul id="expensesList"></ul>
     </div>
   </body>
