--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,17 +11,15 @@
   </head>
   <body>
     <h1>Track Your budget</h1>
-
     <div class="container" id="container">
       <div class="form" id="form">
         <input type="text" id="income" placeholder="Enter your income" />
         <input type="text" class="userExpenses" placeholder="Enter Expenses" />
         <input type="text" class="userExpenses" placeholder="Enter Expenses" />
       </div>
-      <button class="addBtn" id="addBtn">+</button>
-      <button class="submitBtn" id="submitBtn">Submit</button>
+      <button class="addBtn secondary" id="addBtn">+</button>
+      <button class="submitBtn secondary" id="submitBtn">Submit</button>
     </div>
-
     <div class="expensesList" id="userExpenses">
       <h2 id="incomeDisplay">Income:</h2>
       <h2 id="remainingBudgetDisplay">Remaining:</h2>
